thinned out font weight to navigation and fixed desktop hom spacing again

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -194,7 +194,7 @@ p {
         margin-bottom: 170px;
     }
     .welcome {
-        padding: 35px 100px 0px;
+        padding: 0px 100px 35px;
     }
    /* #howitworks {
         margin-bottom: 200px;
